updated footer; added visibility:hidden for fixed-hero using observe-me and the view-state;

--- a/css/style.css
+++ b/css/style.css
@@ -662,10 +662,15 @@ body {
 }
 
 /* SITE MAIN */
+/* QUESTION: border-radius not working for subpages???? (T_T) */
 .site-main {
+    border: 2px solid red;
     background-color: var(--color-body-bg);
     position: relative;
-    z-index: 1;
+    z-index: 20;
+    border-bottom-left-radius: 32px;
+    border-bottom-right-radius: 32px;
+    margin-bottom: -32px;
 }
 
 /* SECTIONS */
@@ -695,38 +700,43 @@ section {
 }
 
 /* SITE FOOTER */
+
+/* Links in class=reveal requires to be z-index:positive. 
+   This also goes with the visibility:hidden in the viewstate for "observe-me." 
+   "Observe-me" in the markup give access to controling the animation and visibility for hero image
+*/
 .site-footer.reveal {
     position: sticky;
     bottom: 0;
-    z-index: -1;
+    z-index: 10;
 }
 
 .site-footer {
+    border: 2px solid blues;
     background-color: var(--color-footer-bg);
     color: var(--color-footer-text);
-    height: 60vh;
-    /* margin-top: 90px; */
-    /* border-top-right-radius: 32px;
-    border-top-left-radius: 32px; */
+    padding: calc( var(--unit-large) + 5% ) var(--unit-large);
+    height: 70vh;
     z-index: 10;
 
     .social-links a:hover {
         font-family: var(--font-serif-thinitalic);
     } 
 
-    /* ADD SOME GENERAL PADDING AROUND THE FOOTER */
-    padding: var(--unit-large) var(--unit-medium);
-
-    h1, h2, h3 {
+    h2, h3 {
         color: var(--color-footer-headings);
-        font-family: var(--font-serif-regular);
         font-feature-settings: "dlig" 1;
         font-weight: normal;
         /* text-transform: uppercase; */
     }
 
     h2 {
+        font-family: var(--font-serif-regular);
         font-size: 4vw;
+    }
+
+    h3 {
+        font-family: var(--font-serif-regularitalic);
     }
 
     h3 ul {
@@ -1231,7 +1241,7 @@ html {
 }
 
 .h2-wrapper {
-    height: 15vh;
+    height: 20svh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -1241,6 +1251,8 @@ html {
     animation-name: fadein-up;
     animation-duration: 2s;
     mix-blend-mode: difference;
+    z-index: 30;
+    position: relative;
 }
 
 .hero-sub h2 {
@@ -1248,7 +1260,8 @@ html {
     font-family: var(--font-serif-bold);
     font-weight: normal;
     font-feature-settings: "dlig" 1;
-    font-size: 3.5em;
+    font-size: 3.75em;
+    line-height: 1;
 }
 
 @media ( max-width: 767px ) {
@@ -1309,10 +1322,6 @@ figure {
 .video-wrapper video {
     border-radius: 8px;
     max-width: 100%;
-    /* margin-bottom: 8em; */
-    /* width: calc(100% + 6px); */
-    /* height: calc(100% + 2px); */
-    /* margin: -3px -1px; */
 }
 
 .button-wrapper {
@@ -1339,10 +1348,13 @@ figure {
 .site-main:has(.casestudy.observe-me[data-viewstate = 'active']) .fixed-hero {
     /* border: 2px solid green; */
     top: 0;
-    /* background-size: 105%; */
     scale: 105%;
     rotate: 1deg;
-    /* z-index: -10; */
+    z-index: -10;
+}
+
+.site-main:has(.hero-sub.observe-me[data-viewstate = 'inactive']) .fixed-hero {
+    visibility: hidden;
 }
 
 .fixed-hero {
@@ -1358,29 +1370,7 @@ figure {
     position: fixed;
 
     top: 30vh;
-    /* bottom: 0; */
-    /* left: 0;
-    bottom: 0; */ 
-
-    /* position: sticky; */
-    /* top: 0; */
-    /* bottom: 0; */
-    z-index: -10;
 }
-
-.fixed-hero-sneilfujita {
-    width: 100%;
-}
-
-/* .fixed-hero-sneilfujita {
-    background-image: url(../work-sneilfujita/img/sneilfujita_hero_1920x1080-75.webp);
-    width: 100%;
-}
-
-.fixed-hero-criminal {
-    background-image: url(../work-criminalspinoff/img/criminal_hero_2500x1500-75.webp);
-    width: 100%;
-} */
 
 .project-metadata {
     font-size: 0.75em;   /* 12px */
